--- a/app/components/register/register.html
+++ b/app/components/register/register.html
@@ -2,181 +2,66 @@
 <html lang="en" ng-app="ois">
 
 <head>
-
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-
-    <title>Registreeri</title>
-
-    <!-- ==== STYLESHEETS ==== -->
-
-    <!-- Register custom CSS-->
-    <link href="register.css" rel="stylesheet">
-
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
+    <title>Tallinna Tehnikaülikool - ÕIS</title>
     <!-- Bootstrap Core CSS -->
     <link href="../../../bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-    <!-- MetisMenu CSS -->
-    <link href="../../../bower_components/metisMenu/dist/metisMenu.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="../../../dist/css/ois.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="../../../bower_components/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-    <!-- ==== END OF STYLESHEETS ==== -->
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+    <link href="register.css" rel="stylesheet">
 </head>
 
 <body ng-controller="registerController">
 
-<div class="body"></div>
-<div class="grad"></div>
-<div class="header">
-    <div class="noselect">Tallinna Tehnikaülikool<span class="noselect"> - ÕIS</span></div>
-</div>
-<br>
-<div class="login">
-    <!-- ============ FORM ============ -->
-    <form name="registerForm" ng-submit="submitForm(email, password, passwordAgain, firstname, lastname)" novalidate>
-
-        <!-- EMAIL -->
-        <input type="email"
-               placeholder="{{ emailHint }}"
-               name="email"
-               class="form-control"
-               ng-model="email"
-               ng-model-options="{ updateOn: 'blur' }"
-               ng-click="hideEmailFieldEmptyErrorMessage()">
+<form name="registerForm" novalidate ng-submit="submitForm(email, password, passwordAgain)">
+    <div class="loginpanel">
+        <div class="txt">
+            <input name="email" ng-model="email" id="user" type="email" placeholder="{{ emailHint }}"
+                   ng-click="hideEmailFieldEmptyErrorMessage()"/>
+            <label for="user" class="entypo-user"></label>
+            <!--<p class="error" ng-show="registerForm.email.$invalid && !registerForm.email.$pristine && registerForm.email.$touched">-->
+            <!--Palun sisesta korrektne email. N: juulius@ttu.ee</p>-->
         <p class="error"
-           ng-show="registerForm.email.$invalid && !registerForm.email.$pristine && registerForm.email.$touched"
-           class="help-block">
-            Palun sisesta korrektne email. <br>N: juulius@ttu.ee</p>
-        <p class="error"
-           ng-if="submittedEmail && (email == undefined || email == '') && !(registerForm.email.$invalid && !registerForm.email.$pristine && registerForm.email.$touched)">
+           ng-if="submittedEmail && (email == undefined || email == '') && !(email.$invalid && !email.$pristine && email.$touched)">
             {{ emailFieldEmptyErrorMessage }}</p>
-
-        <!-- PASSWORD -->
-        <input type="password"
-               placeholder="{{ passwordHint }}"
-               name="password"
-               class="form-control"
-               ng-model="password"
-               ng-click="hidePasswordFieldEmptyErrorMessage()"
-        >
+        </div>
+        <div class="txt">
+            <input name="password" ng-model="password" id="pwd" type="password" placeholder="{{ passwordHint }}"
+                   ng-click="hidePasswordFieldEmptyErrorMessage()"/>
+            <label for="pwd" class="entypo-lock"></label>
         <p class="error" ng-if="submittedPassword && (password == undefined || password == '')">{{
-            passwordFieldEmptyErrorMessage }}</p>
-
-        <!-- PASSWORD AGAIN -->
-        <input type="password"
-               placeholder="{{ passwordAgainHint }}"
-               name="passwordAgain"
-               class="form-control"
-               ng-model="passwordAgain"
-               ng-click="hidePasswordAgainFieldEmptyErrorMessage()"
-        >
+            passwordFieldEmptyErrorMessage}}</p>
+        </div>
+        <div class="txt">
+            <input name="passwordAgain" ng-model="passwordAgain" id="pwd" type="password"
+                   placeholder="{{ passwordAgainHint }}" ng-click="hidePasswordAgainFieldEmptyErrorMessage()"/>
+            <label for="pwd" class="entypo-lock"></label>
         <p class="error" ng-if="password != passwordAgain && passwordAgain != undefined">{{ passwordMismatchErrorMessage
             }}</p>
         <p class="error" ng-if="submittedPasswordAgain && (passwordAgain == undefined || passwordAgain == '')">{{
             passwordAgainFieldEmptyErrorMessage}}</p>
+        </div>
+        <div class="buttons">
+            <input type="submit" value="{{registerHint}}"/>
+    <span>
+      <a href="../login/login.html" class="entypo-user-add register">Logi sisse</a>
+    </span>
+        </div>
 
-        <!-- EESNIMI -->
-        <input type="text"
-               placeholder="{{ firstnameHint }}"
-               name="firstname"
-               class="form-control"
-               ng-model="firstname"
-               ng-click="hideFirstnameFieldEmptyErrorMessage()"
-        >
-        <p class="error" ng-if="submittedFirstname && (firstname == undefined || firstname == '')">{{
-            firstnameFieldEmptyErrorMessage}}</p>
+        <div class="hr">
+            <div></div>
+            <div>VÕI</div>
+            <div></div>
+        </div>
 
-        <!-- PEREKONNANIMI -->
-        <input type="text"
-               placeholder="{{ lastnameHint }}"
-               name="lastname"
-               class="form-control"
-               ng-model="lastname"
-               ng-click="hideLastnameFieldEmptyErrorMessage()"
-        >
-        <p class="error" ng-if="submittedLastname && (lastname == undefined || lastname == '')">{{
-            lastnameFieldEmptyErrorMessage}}</p>
-
-        <select class="option" id="sel1">
-            <option ng-model="student">Õpilane</option>
-            <option ng-model="teacher">Õpetaja</option>
-        </select>
-
-        <input type="submit" value="{{ registerHint }}">
-
-        <a class="help" href="../login/login.html">Oled juba kasutaja? Logi sisse.</a>
-    </form>
-
-    <!-- =========== END OF FORM ========== -->
+        <div class="social">
+            <a href="javascript:void(0)" class="facebook"></a>
+            <a href="javascript:void(0)" class="twitter"></a>
+            <a href="javascript:void(0)" class="googleplus"></a>
+        </div>
 </div>
+</form>
+<!--<span class="resp-info"></span>-->
 
-<!--<div class="container">-->
-<!--<div class="row">-->
-<!--<div class="col-md-4 col-md-offset-4">-->
-<!--<div class="login-panel panel panel-default">-->
-<!--<div class="panel-heading">-->
-<!--<h3 class="panel-title">Registreeru</h3>-->
-<!--</div>-->
-<!--<div class="panel-body">-->
-<!--<form role="form">-->
-<!--<fieldset>-->
-<!--<div class="form-group">-->
-<!--<input class="form-control" placeholder="{{ emeil }}" name="email" type="email"-->
-<!--autofocus>-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<input class="form-control" placeholder="{{ parool }}" name="password" type="password"-->
-<!--value="">-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<input class="form-control" placeholder="{{ parooluuesti }}" name="passwordconfirm"-->
-<!--type="password" value="">-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<input class="form-control" placeholder="{{ eesnimi }}" name="eesnimi" type="text"-->
-<!--value="">-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<input class="form-control" placeholder="{{ perekonnanimi }}" name="perekonnanimi"-->
-<!--type="text" value="">-->
-<!--</div>-->
-<!--<div class="form-group">-->
-<!--<select class="form-control" id="sel1">-->
-<!--<option>Õpilane</option>-->
-<!--<option>Õpetaja</option>-->
-<!--</select>-->
-<!--</div>-->
-<!--<div class="form-group login-group-checkbox">-->
-<!--<input type="checkbox" class="" id="reg_agree" name="reg_agree">-->
-<!--<label for="reg_agree">Nõustun <a href="#" target="popup"-->
-<!--onclick="window.open('termsandcontitions.html','Tingimused','width=600,height=400')">tingimustega</a></label>-->
-<!--</div>-->
-<!--<p>Oled juba kasutaja? <a href="../login/login.html">logi sisse</a></p>-->
-<!--&lt;!&ndash; Change this to a button or input when using this as a form &ndash;&gt;-->
-<!--<a href="../home/home.html" class="btn btn-lg btn-success btn-block">Registreerin</a>-->
-<!--</fieldset>-->
-<!--</form>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
-<!--</div>-->
 
 <!-- jQuery -->
 <script src="../../../bower_components/jquery/dist/jquery.min.js"></script>
@@ -193,6 +78,9 @@
 <script src="../../../app/app.js"></script>
 <script src="../../../app/components/register/registerController.js"></script>
 
+<!-- Bootstrap Core JavaScript -->
+<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+
 <!-- Bootstrap Core AngularJS -->
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
@@ -200,9 +88,5 @@
 <!-- Metis Menu Plugin JavaScript -->
 <script src="../../../bower_components/metisMenu/dist/metisMenu.min.js"></script>
 
-<!-- Bootstrap Core JavaScript -->
-<script src="../../../bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-
 </body>
-
 </html>
