Working on student work submission page

--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -284,12 +284,14 @@
 <script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="../../../bower_components/angular-smart-table/dist/smart-table.min.js"></script>
+<script src="../../../bower_components/angular-bootstrap-file-field/dist/angular-bootstrap-file-field.min.js"></script>
 
 <script src="../../../app/app.js"></script>
 <script src="../../../app/components/home/homeController.js"></script>
 <script src="../../../app/components/study_results/studyResultsController.js"></script>
 <script src="../../../app/shared/left_panel/leftPanelController.js"></script>
 <script src="../../../app/components/grade_sheet_t/gradeSheetTeacherController.js"></script>
+<script src="../../../app/components/work_submission/workSubmissionController.js"></script>
 
 <!-- Bootstrap Core AngularJS -->
 <script src="../../../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
