--- a/app/components/login/login.html
+++ b/app/components/login/login.html
@@ -64,6 +64,8 @@
 <script src="../../../bower_components/angular-animate/angular-animate.min.js"></script>
 <script src="../../../bower_components/angular-touch/angular-touch.min.js"></script>
 <script src="../../../bower_components/angular-smart-table/dist/smart-table.min.js"></script>
+<script src="../../../bower_components/angular-bootstrap-file-field/dist/angular-bootstrap-file-field.min.js"></script>
+
 
 <script src="../../../app/app.js"></script>
 <script src="../../../app/components/login/loginController.js"></script>
