--- a/app/components/register/register.html
+++ b/app/components/register/register.html
@@ -14,6 +14,17 @@
 
 <form name="registerForm" novalidate ng-submit="submitForm(email, password, passwordAgain)">
     <div class="loginpanel">
+
+        <div class="head">
+            Tallinna Tehnikaülikool
+        </div>
+
+        <div class="hr">
+            <div></div>
+            <div>ÕIS</div>
+            <div></div>
+        </div>
+
         <div class="txt">
             <input name="email" ng-model="email" id="user" type="email" placeholder="{{ emailHint }}"
                    ng-click="hideEmailFieldEmptyErrorMessage()"/>
@@ -45,18 +56,6 @@
     <span>
       <a href="../login/login.html" class="entypo-user-add register">Logi sisse</a>
     </span>
-        </div>
-
-        <div class="hr">
-            <div></div>
-            <div>VÕI</div>
-            <div></div>
-        </div>
-
-        <div class="social">
-            <a href="javascript:void(0)" class="facebook"></a>
-            <a href="javascript:void(0)" class="twitter"></a>
-            <a href="javascript:void(0)" class="googleplus"></a>
         </div>
 </div>
 </form>
