--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -60,9 +60,13 @@
                     <li><a href="#/"><i class="fa fa-gear fa-fw"></i> Seaded</a>
                     </li>
                     <li class="divider"></li>
-                    <li><a href="../../../app/components/login/login.html"><i class="fa fa-sign-out fa-fw"></i>
-                        Logi välja</a>
-                    </li>
+                    <button type="button" ng-click="logout()"
+                            class="fa fa-sign-out fa-fw">
+                        Logi välja
+                    </button>
+                    <!--<li><a href="../../../app/components/login/login.html"><i class="fa fa-sign-out fa-fw"></i>-->
+                        <!--Logi välja</a>-->
+                    <!--</li>-->
                 </ul>
                 <!-- /.dropdown-user -->
             </li>
