--- a/app/components/home/home.html
+++ b/app/components/home/home.html
@@ -60,12 +60,14 @@
                     <li><a href="#/"><i class="fa fa-gear fa-fw"></i> Seaded</a>
                     </li>
                     <li class="divider"></li>
-                    <button type="button" ng-click="logout()"
-                            class="fa fa-sign-out fa-fw">
-                        Logi välja
-                    </button>
+                    <li>
+                        <a href="" ng-click="logout()">
+                            <i class="fa fa-sign-out fa-fw pointer"></i>
+                            Logi välja
+                        </a>
+                    </li>
                     <!--<li><a href="../../../app/components/login/login.html"><i class="fa fa-sign-out fa-fw"></i>-->
-                        <!--Logi välja</a>-->
+                    <!--Logi välja</a>-->
                     <!--</li>-->
                 </ul>
                 <!-- /.dropdown-user -->
